Final fix overflow

--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -82,7 +82,6 @@
 .no-scroll {
     overflow: hidden;
     position: relative;
-    height: 100%;
 }
 
 .is-fixed {
